--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -20,32 +20,50 @@
             <a class="navbar-brand" href="/">
                 <img src="{{ url_for('static', filename='assets/0xFlag_Logo.png') }}" alt="Logo" width="50" height="auto" class="d-inline-block align-text-center me-2">
             </a>
-
             <button class="navbar-toggler" type="button"
                     data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="/">Inicio</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/nmap' %}active{% endif %}" href="/nmap">Generador Nmap</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarReconocimiento" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Reconocimiento
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-dark cyber-dropdown" aria-labelledby="navbarReconocimiento">
+                            <li>
+                                <a class="dropdown-item {% if request.path == '/nmap' %}active{% endif %}" href="/nmap">Generador Nmap</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item {% if request.path == '/discovery' %}active{% endif %}" href="/discovery">Discovery</a>
+                            </li>
+                        </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/tty' %}active{% endif %}" href="/tty">TTY</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarExplotacion" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Explotación
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-dark cyber-dropdown" aria-labelledby="navbarExplotacion">
+                            <li>
+                                <a class="dropdown-item {% if request.path == '/reverse' %}active{% endif %}" href="/reverse">Reverse Shell</a>
+                            </li>
+                        </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/discovery' %}active{% endif %}" href="/discovery">Discovery</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarEscalada" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Escalada
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-dark cyber-dropdown" aria-labelledby="navbarEscalada">
+                            <li>
+                                <a class="dropdown-item {% if request.path == '/tty' %}active{% endif %}" href="/tty">TTY</a>
+                            </li>
+                        </ul>
                     </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/reverse' %}active{% endif %}" href="/reverse">Reverse Shell</a>
-                    </li>
-
                     <li class="nav-item border-start border-secondary ms-2 ps-2">
                         <a class="nav-link {% if request.path == '/history' %}active{% endif %}" href="/history">Historial</a>
                     </li>
@@ -66,7 +84,7 @@
 
     <!-- Footer (optional, add later if you want) -->
     
-    <footer class="bg-dark text-white text-center py-3">
+    <footer class="text-white text-center py-3">
         © 2025 0xFlag
     </footer>
     
