--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -3584,9 +3584,9 @@ textarea.form-control-lg {
   background-color: var(--bs-dropdown-link-hover-bg);
 }
 .dropdown-item.active, .dropdown-item:active {
-  color: var(--bs-dropdown-link-active-color);
+  color: #A432E2;
   text-decoration: none;
-  background-color: var(--bs-dropdown-link-active-bg);
+  background-color: #A432E2;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: var(--bs-dropdown-link-disabled-color);
@@ -6789,7 +6789,7 @@ textarea.form-control-lg {
 
 .text-bg-secondary {
   color: #fff !important;
-  background-color: RGBA(108, 117, 125, var(--bs-bg-opacity, 1)) !important;
+  background-color: #0b132b !important;
 }
 
 .text-bg-success {
@@ -8261,7 +8261,7 @@ textarea.form-control-lg {
 
 .bg-secondary {
   --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-secondary-rgb), var(--bs-bg-opacity)) !important;
+  background-color: #475569 !important;
 }
 
 .bg-custom {
