--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -62,6 +62,9 @@
                             <li>
                                 <a class="dropdown-item {% if request.path == '/tty' %}active{% endif %}" href="/tty">TTY</a>
                             </li>
+                            <li>
+                                <a class="dropdown-item {% if request.path == '/peass' %}active{% endif %}" href="/peass">Peass-Ng</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="nav-item border-start border-secondary ms-2 ps-2">
